<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiveSettings</string>
    <string name="app_name_ex">Hive Settings</string>
    <string name="app_version">1.2.8</string>
    <string name="s_location">Location</string>
    <string name="s_gps">GPS</string>
    <string name="s_gps_network">GPS + Network</string>
    <string name="s_network">Network</string>
    <string name="s_wifi">Wi-Fi</string>
    <string name="s_rotation">Rotation</string>
    <string name="s_bluetooth">Bluetooth</string>
    <string name="s_airplane">Airplane</string>
    <string name="s_sync">Sync</string>
    <string name="s_usb">USB</string>
    <string name="s_bright">Brightness</string>
    <string name="s_discard">Discard</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_save">Save</string>
    <string name="s_ok">Ok</string>
    <string name="s_point">AP:</string>
    <string name="s_battery">100%</string>
    <string name="s_storage">Storage</string>
    <string name="s_explorer">Explorer</string>
    <string name="s_edge">EDGE</string>
    <string name="s_2g">2G</string>
    <string name="s_3g">3G</string>
    <string name="s_4g">4G</string>
    
    <string name="s_brightness_current_lvl">Current level</string>
    <string name="s_btn_brightness_low">0%</string>
    <string name="s_btn_brightness_custom">Custom</string>
    <string name="s_btn_brightness_high">100%</string>
    <string name="s_brightness_auto">Auto</string>
    <string name="s_btn_security">Security</string>
    <string name="s_btn_screen_off">Screen off</string>
    <string name="s_profile">Profiles</string>
    <string name="s_ringer_mode">Ringer mode</string>
    <string name="s_apn">APN</string>
    <string name="s_btn_apps">Apps</string>
    <string name="s_btn_memory">Memory</string>
    
    <string name="s_volume_control">Volume control</string>
    <string name="s_volume_ringer">Ringer volume</string>
    <string name="s_volume_notification">Notification volume</string>
    <string name="s_volume_media">Media volume</string>
    <string name="s_volume_alarm">Alarm volume</string>
    <string name="s_volume_voice">Voice call volume</string>
    <string name="s_volume_system">System volume</string>
    
    <string name="s_export_success">has been exported successfully.</string>
    <string name="s_export_access_denied">Sorry, I can not access.</string>
    <string name="s_export_io_error">I/O error.</string>
    <string name="s_open_error">Opening error.</string>
    
    <string name="s_security_ex">Security exception.</string>
    
    <string name="s_action_open_app">Open</string>
    <string name="s_action_info_app">Info</string>
    <string name="s_action_export_app">Export</string>
    <string name="s_action_uninstall_app">Uninstall</string>
    
    <string name="s_sort_by_name">Sort by name</string>
    <string name="s_sort_by_size">Sort by size</string>
    
    <string name="s_find_apps">Loading&#8230;</string>
    <string name="s_no_files">No files</string>
    
    <string name="s_no_light_sensor">No light sensor</string>
    
    <string name="s_hold_me">Hold me</string>
    <string name="s_rate_me">Please Rate Us, To Help Improve This App.</string>
    <string name="s_prefs_caption">Preferences</string>
    <string name="s_prefs_category_main">Main</string>
    <string name="s_prefs_category_apps_manager">Apps Manager</string>
    <string name="s_no_thanks">No Thanks</string>
    <string name="s_rate_it">Rate It!</string>
    <string name="s_like_this_app">Like This App?</string>
    <string name="s_please_rate_it_google_play">Please rate it in the Google Play!</string>
    <string name="s_rate_this_app">Rate it in the Google Play.</string>
    <string name="s_five_stars">I like this app, 5 stars!</string>
    
    <string name="s_desc">simple</string>
    
    <string name="s_notification_icon">Notification icon</string>
    <string name="s_display_system_apps">Display system apps</string>
    
    <string name="s_apps_count">Apps count:</string>
    
    <string name="s_screen_15sec">15 seconds</string>    
	<string name="s_screen_30sec">30 seconds</string>
	<string name="s_screen_1min">1 minute</string>
	<string name="s_screen_2min">2 minutes</string>
	<string name="s_screen_5min">5 minutes</string>
	<string name="s_screen_10min">10 minutes</string>
	<string name="s_screen_30min">30 minutes</string>
	<string name="s_screen_never">Never</string>
	
	<string name="s_ringer_onlysound">Only sound</string>
	<string name="s_ringer_soundvibra">Sound &amp; vibration</string>
	<string name="s_ringer_vibra">Only vibration</string>
	<string name="s_ringer_silent">Silent</string>
	
	<string name="notif_text">Click to open</string>
	<string name="translation_help">Help with translation</string>
	<string name="lang_title">Application Language</string>
	<string name="lang_dialog_title">Choose language:</string>
	<string name="lang_summary">Need restart application to apply.\nMenu button -> Quit</string>
	<string name="s_menu_settings">Settings</string>
	<string name="s_menu_quit">Quit</string>
	<string name="s_say_update_text">Will be updated after exiting of the settings.</string>
	
</resources>