<?xml version="1.0" encoding="UTF-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/brightnessbackground"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/brightness_current_lvl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_control"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tw_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_ringer"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:id="@+id/tw_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_notification"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:id="@+id/tw_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_media"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:id="@+id/tw_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_alarm"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:id="@+id/tw_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_voice"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <TextView
                android:id="@+id/tw_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/s_volume_system"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_volume_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/s_ok"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</merge>