<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        android:background="#D0000000"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_auto_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/s_btn_screen_off"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:background="#D0000000"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_15sec"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_30sec"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_1min"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_2min"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv5"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_5min"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv6"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_10min"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv7"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_30min"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/l8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv8"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_screen_never"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>