<?xml version="1.0" encoding="UTF-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/brightnessbackground"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:shadowColor="#33B5E5"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@string/s_like_this_app"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:shadowColor="#33B5E5"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                android:text="@string/s_please_rate_it_google_play"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold"
                android:typeface="normal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_no_thanks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/s_no_thanks"
                    android:textColor="@color/gray"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_rate_it_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_selector"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:shadowColor="#33B5E5"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6"
                    android:text="@string/s_rate_it"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</merge>