<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        android:background="#D0000000"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_selector"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_auto_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/s_ringer_mode"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginRight="41dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:background="#D0000000"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/rm_l1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/rm_iv1"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_ringer_onlysound"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rm_l2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/rm_iv2"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_ringer_soundvibra"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rm_l3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/rm_iv3"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_ringer_vibra"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rm_l4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/rm_iv4"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/s_ringer_silent"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>